<resources>
    <string name="app_name">Android_Version_Data</string>
    <string name="android_name">Android Name</string>
    <string name="android_version">Android Version</string>
    <string name="details">Details</string>
    <string name="developer">Developer</string>
    <string name="google">Google</string>
    <string name="initial_release">Initial Release</string>
    <string name="latest_release">Latest Release</string>
    <string name="preceded_by">Preceded by</string>
    <string name="succeeded_by">Succeeded by</string>
    <string name="official_website">Official Website</string>
</resources>