<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/home_android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="50dp"
                android:layout_marginLeft="50dp"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@android:color/darker_gray" />
        </FrameLayout>

        <TextView
            style="@style/TextContent.Black"
            android:id="@+id/name_ver_android"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:textSize="32sp"
            tools:text="Nama Versi Android"/>

        <TextView
            android:id="@+id/ver_android"
            style="@style/TextContent.Subtitle"
            android:layout_marginBottom="16dp"
            tools:text="version"/>

        <TextView
            android:id="@+id/desc_android"
            style="@style/TextContent"
            android:layout_marginBottom="16dp"
            android:lineSpacingMultiplier="1"
            android:textColor="@android:color/black"
            tools:text="Description"/>

        <TextView
            style="@style/TextContent.Subtitle"
            android:layout_marginBottom="8dp"
            android:text="@string/details"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/developer" />

                <TextView
                    style="@style/TextSpec.Value"
                    android:text="@string/google" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/initial_release" />

                <TextView
                    android:id="@+id/init_android"
                    style="@style/TextSpec.Value"
                    tools:text="initial release" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/latest_release" />

                <TextView
                    android:id="@+id/lat_android"
                    style="@style/TextSpec.Value"
                    tools:text="latest release" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/preceded_by" />

                <TextView
                    android:id="@+id/pre_android"
                    style="@style/TextSpec.Value"
                    tools:text="preceded by" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/succeeded_by" />

                <TextView
                    android:id="@+id/suc_android"
                    style="@style/TextSpec.Value"
                    tools:text="succeeded by" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/official_website" />

                <TextView
                    android:id="@+id/web_android"
                    style="@style/TextSpec.Value"
                    tools:text="official website" />
            </TableRow>
        </TableLayout>
    </LinearLayout>
</ScrollView>
